# CiviData

./: .gitignore  clean_data.py  docker-compose.yml  extract_secop.py  load_to_postgres.py  pipeline.py  pyproject.toml
docs/: CATALOGO.md  CONTRATACION.md  DATABASE.md  DAX_CONSULTAS.md  EDUCACION.md  INDICADORES.md  POWERBI_GUIDE.md  RAG.md  README.md
sql/functions/: consultas.sql
sql/migrations/: 001_create_marts.sql  002_resumenes.sql
src/api/: __init__.py  main.py
src/extract/: extract_contratacion.py  extract_educacion.py  spider_secop.py
src/load/: load_to_postgres.py
src/rag/: __init__.py  chain.py  llm.py  loader.py  splitter.py
src/transform/: clean_contratacion.py  clean_educacion.py  clean_spark.py  consolidate_secop.py
