[project]
name = "cividata"
version = "0.1.0"
description = "Pipeline ETL para datos abiertos de Colombia - SECOP, Educación y más"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "scrapy>=2.11",
    "pyspark>=3.5",
]

[dependency-groups]
dev = []

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
]
rag = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
]
all = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
]